--- a/src/SharedWebComponents/Shared/MainLayout.razor
+++ b/src/SharedWebComponents/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits             LayoutComponentBase
 
-<MudThemeProvider @bind-IsDarkMode="@_isDarkTheme" Theme="_theme" />
+<MudThemeProvider @bind-IsDarkMode="@IsDarkTheme" Theme="_theme" />
 <MudDialogProvider FullWidth="true" MaxWidth="MaxWidth.Small"
                    CloseButton="true"
                    DisableBackdropClick="true"
@@ -9,19 +9,19 @@
 <MudSnackbarProvider />
 
 <HeadContent>
-    <ConditionalStyles IsDarkTheme=@_isDarkTheme />
+    <ConditionalStyles IsDarkTheme=@IsDarkTheme />
 </HeadContent>
-<MudRTLProvider RightToLeft="_isRightToLeft">
-    <MudLayout class="@(_isRightToLeft ? "rtl-lang" : "")">
+<MudRTLProvider RightToLeft="IsRightToLeft">
+    <MudLayout class="@(IsRightToLeft ? "rtl-lang" : "")">
         <MudAppBar Elevation="20">
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" id="nav-toggle"
                         Title="Toggle navigation sidebar"
                         Size="Size.Large" Edge="Edge.Start" OnClick="@OnMenuClicked" />
             @if (SortDisabled is false)
             {
-                <MudTooltip Text="@(_isReversed ? "Sort conversations with latest answers on bottom" : "Sort conversations with latest answers on top")"
+                <MudTooltip Text="@(IsReversed ? "Sort conversations with latest answers on bottom" : "Sort conversations with latest answers on top")"
                             Placement="Placement.Right" Arrow="true" Color="Color.Primary">
-                    <MudToggleIconButton Toggled="@_isReversed" ToggledChanged=@OnIsReversedChanged Size="Size.Large"
+                    <MudToggleIconButton Toggled="@IsReversed" ToggledChanged=@OnIsReversedChanged Size="Size.Large"
                                          ToggledSize="Size.Large" Color="Color.Inherit"
                                          Icon=@Icons.Material.Filled.ArrowCircleDown ToggledColor="Color.Inherit"
                                          ToggledIcon=@Icons.Material.Filled.ArrowCircleUp />
@@ -34,7 +34,7 @@
                            Title="Open the developer settings side panel"
                            OnClick="@(_ => _settingsOpen = _settingsOpen is false)" />
             }
-            <MudToggleIconButton Toggled="@_isDarkTheme" ToggledChanged=@OnThemeChanged Size="Size.Large"
+            <MudToggleIconButton Toggled="@IsDarkTheme" ToggledChanged=@OnThemeChanged Size="Size.Large"
                                 ToggledSize="Size.Large"
                                  Title="Switch to Dark theme" Icon=@Icons.Material.Filled.DarkMode Color="@Color.Inherit"
                                 ToggledTitle="Switch to Light theme" ToggledIcon=@Icons.Material.Filled.WbSunny ToggledColor=@Color.Warning />
@@ -57,7 +57,7 @@
         <MudMainContent>
             <MudContainer MaxWidth="MaxWidth.Large" Fixed="false" Class="my-6 pt-6">
                 <CascadingValue Value="_settingsPanel?.Settings" Name="Settings">
-                    <CascadingValue Value="_isReversed" Name="IsReversed">
+                    <CascadingValue Value="IsReversed" Name="IsReversed">
                         @Body
                     </CascadingValue>
                 </CascadingValue>
