--- a/src/SharedWebComponents/Shared/NavMenu.razor
+++ b/src/SharedWebComponents/Shared/NavMenu.razor
@@ -1,8 +1,14 @@
 ﻿<MudNavMenu Rounded="true" Margin=Margin.Normal Class="pa-2" Color=Color.Primary>
     <MudNavLink Href="tableschemas" aria-label="View (and/or upload) documents."
-                Icon="@Icons.Material.Filled.FolderSpecial">
+                Icon="@Icons.Material.Filled.DataExploration">
         Table Schemas
     </MudNavLink>
+
+    <MudNavLink Href="examples" aria-label="View (and/or upload) examples."
+                Icon="@Icons.Material.Filled.Feedback">
+        Examples
+    </MudNavLink>
+
     <MudNavLink Href="chat" aria-label="Chat navigation option."
                 Icon="@Icons.Material.Filled.QuestionAnswer">
         Chat
