--- a/src/SharedWebComponents/Components/Answer.razor
+++ b/src/SharedWebComponents/Components/Answer.razor
@@ -73,7 +73,7 @@
             </MudTabPanel>
 
 
-            <MudTabPanel Icon="@Icons.Material.Filled.BarChart" Text="Schema" ToolTip="Show charts" Disabled="@(Retort is { DataPoints: null } or { DataPoints.Length: 0 })">  
+            <MudTabPanel Icon="@Icons.Material.Filled.BarChart" Text="Chart" ToolTip="Show charts" Disabled="@(Retort is { DataPoints: null } or { DataPoints.Length: 0 })">  
                 <ChildContent>  
                     <MudPaper Class="pa-6" Elevation="3">  
                         <SupportingContent DataPoints="Retort.Charts"/>  
