--- a/src/SharedWebComponents/Components/Examples.razor
+++ b/src/SharedWebComponents/Components/Examples.razor
@@ -7,26 +7,26 @@
         <MudText Typo="Typo.h2" Align="Align.Center">@Message</MudText>
     </MudItem>
     <MudItem lg="3" xs="12">
-        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(WhatIsIncluded))"
+        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(Question1))"
                   Class="d-flex pa-8 clickable flex-column align-center justify-center mud-width-full rounded dim">
             <MudText Typo="Typo.h5">
-                @WhatIsIncluded
+                @Question1
             </MudText>
         </MudPaper>
     </MudItem>
     <MudItem lg="3" xs="12">
-        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(WhatIsPerfReview))"
+        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(Question2))"
                   Class="d-flex pa-8 clickable flex-column align-center justify-center mud-width-full rounded dim">
             <MudText Typo="Typo.h5">
-                @WhatIsPerfReview
+                @Question2
             </MudText>
         </MudPaper>
     </MudItem>
     <MudItem lg="3" xs="12">
-        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(WhatDoesPmDo))"
+        <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(Question3))"
                   Class="d-flex pa-8 clickable flex-column align-center justify-center mud-width-full rounded dim">
             <MudText Typo="Typo.h5">
-                @WhatDoesPmDo
+                @Question3
             </MudText>
         </MudPaper>
     </MudItem>
